--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "Chris Bartley <bartley@cmu.edu>",
   "license": "GPL-2.0",
   "dependencies": {
-    "debug": "^1.0.2",
-    "speck-sensor": "^0.1.2"
+    "log4js": "^0.6.21",
+    "speck-sensor": "^0.1.3"
   },
   "devDependencies": {},
   "scripts": {
