--- a/log4js-config.json
+++ b/log4js-config.json
@@ -1,15 +1,24 @@
 {
+   "replaceConsole" : false,
    "appenders" : [
       {
          "type" : "console",
-         "level" : "DEBUG"
+         "layout" : {
+            "type" : "pattern",
+            "pattern" : "%d{ABSOLUTE} [%[%p%]] %c - %m"
+         }
       },
       {
          "type" : "file",
-         "level" : "DEBUG",
          "filename" : "node-speck-gateway.log",
          "maxLogSize" : 1000000,
-         "backups" : 5
+         "backups" : 5,
+         "layout" : {
+            "type" : "basic"
+         }
       }
-   ]
+   ],
+   "levels" : {
+      "[all]" : "DEBUG"
+   }
 }
